# TFG

./: CMakeLists.txt  README.md  Shader.cpp  Shader.h  glad.c  glad.h  main  main.cpp
GameClasses/: BasicShapeBuilder.h  Camera.h  Light.cpp  Light.h  Math.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  World.cpp  World.h  XmlParser.cpp  XmlParser.h
GameClasses/Base/: EngineSettings.h  Renderer.cpp  Renderer.h  World.cpp  World.h
GameClasses/Basic/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h
GameClasses/Entities/: BasicTerrain.cpp  BasicTerrain.h  BasicWater.cpp  BasicWater.h  Entity.cpp  Entity.h  Light.cpp  Light.h  PhysicsObject.cpp  PhysicsObject.h
GameClasses/Entities/Planet/: Atmosphere.cpp  Atmosphere.h  Cubesphere.cpp  Cubesphere.h  Icosphere.cpp  Icosphere.h  Planet.cpp  Planet.h  PlanetChunk.cpp  PlanetChunk.h  Sphere.h  TerrainChunk.cpp  TerrainChunk.h  WaterSphere.cpp  WaterSphere.h
GameClasses/Util/: BasicShapeBuilder.h  Cubesphere.cpp  Cubesphere.h  XmlParser.cpp  XmlParser.h
GameClasses/Util/glm/: CMakeLists.txt
OldStuff/: BasicTerrain.cpp  BasicTerrain.h
Scenes/: Scene0.xml  Scene1.xml  Scene2.xml  Scene3.xml  Scene4.xml  Scene5.xml
Scenes/Debug/: Scene1.xml
Shaders/: lightingShader.fs  lightingShader.vs  lightingShaderFragment.shader  lightingShaderInstancedVertex.shader  lightingShaderTCS.shader  lightingShaderTES.shader  lightingShaderVertex.shader  skyboxVertexShader.shader  skydomeFragment.shader  skydomeVertex.shader  terrainShaderFragment.shader  terrainShaderTCS.shader  terrainShaderTES.shader  terrainShaderVertex.shader  waterShaderFragment.shader  waterShaderVertex.shader
Shaders/Old/: depthShadowMappingInstancedVertex.shader  depthShadowMappingVertex.shader  vertexShader.vs
Shaders/PostProcess/: blurShader.fs  edgeShader.fs  inverseShader.fs  sharpenShader.fs
Shaders/backup/: alternativeScatteringFragment.shader
